[AGW][MME] GTP APP Offload Pipelined (#5217)
Overview of changes
=================================
1. Targeted for 4554
2. New proto messages defined between MME
   and pipelined.
3. Introduced pipelined_client in MME
4. GRPC messages exchange between MME and Pipleined
5. RPC handler in pipelined for the messages

Testing
=================================
1. New CLIs introduced in pipelined_cli.py
2. integ_test

Signed-off-by: YOGESH PANDEY <yogesh@wavelabs.ai>

--- a/lte/gateway/configs/spgw.yml
+++ b/lte/gateway/configs/spgw.yml
@@ -41,3 +41,6 @@ ovs_multi_tunnel: true
 
 # Non-NAT specific config
 ovs_uplink_port_number: 2
+
+# Flag to control ovs table=0 using pipelined
+pipelined_managed_tbl0: false
