--- a/lte/gateway/c/oai/lib/CMakeLists.txt
+++ b/lte/gateway/c/oai/lib/CMakeLists.txt
@@ -20,6 +20,7 @@ if (EMBEDDED_SGW)
 if (ENABLE_OPENFLOW)
 add_subdirectory(openflow) # LIB_OPENFLOW
 add_subdirectory(openflow/controller) # LIB_OPENFLOW_CONTROLLER
+add_subdirectory(pipelined_client) # LIB_PIPELINED_CLIENT
 endif (ENABLE_OPENFLOW)
 else (EMBEDDED_SGW)
   add_subdirectory(gtpv2-c) # LIB_GTPV2C
