[nms] Switch NMS docker to use Postgres, deprecate usage of MariaDB
Signed-off-by: Andrei Lee <andreilee@fb.com>

--- a/nms/app/packages/magmalte/package.json
+++ b/nms/app/packages/magmalte/package.json
@@ -29,10 +29,11 @@
     "@fbcnms/alarms": "^0.1.12",
     "@fbcnms/auth": "^0.1.0",
     "@fbcnms/babel-register": "^0.1.2",
+    "@fbcnms/express-middleware": "^0.1.1",
     "@fbcnms/magma-api": "^0.1.0",
     "@fbcnms/platform-server": "^0.1.23",
     "@fbcnms/projects": "^0.1.0",
-    "@fbcnms/sequelize-models": "^0.1.0",
+    "@fbcnms/sequelize-models": "^0.1.1",
     "@fbcnms/strings": "^0.1.0",
     "@fbcnms/types": "^0.1.11",
     "@fbcnms/ui": "^0.1.8",
@@ -48,8 +49,8 @@
     "https": "^1.0.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.0",
-    "mariadb": "^2.4.2",
     "material-table": "1.69.0",
+    "pg": "^8.5.1",
     "pug": "^3.0.0",
     "react-chartjs-2": "^2.7.4",
     "react-json-tree": "^0.11.2",
