--- a/nms/app/packages/magmalte/docker-compose.yml
+++ b/nms/app/packages/magmalte/docker-compose.yml
@@ -3,18 +3,14 @@
 version: '3.6'
 
 services:
-  mariadb:
-    image: mariadb:10.4.12
+  postgres:
+    image: postgres:9.5
     volumes:
-      - nmsdb:/var/lib/mysql
+      - nms-db:/var/lib/postgresql/data
     environment:
-      MYSQL_ROOT_PASSWORD: 12345
-      MYSQL_DATABASE: nms
-      MYSQL_USER: nms
-      MYSQL_PASSWORD: password
-    #restart: on-failure
-    healthcheck:
-      test: mysqladmin ping -p12345
+      POSTGRES_DB: nms
+      POSTGRES_USER: nms
+      POSTGRES_PASSWORD: password
 
   nginx-proxy:
     image: nginx
@@ -29,7 +25,7 @@ services:
     build:
       context: ../..
       dockerfile: packages/magmalte/Dockerfile
-    command: "/usr/local/bin/wait-for-it.sh -s -t 30 mariadb:3306 -- yarn run start:dev"
+    command: "/usr/local/bin/wait-for-it.sh -s -t 30 postgres:5432 -- yarn run start:dev"
     volumes:
       - ../../packages/fbcnms-magma-api:/usr/src/packages/fbcnms-magma-api
       - ../../packages/magmalte/app:/usr/src/packages/magmalte/app
@@ -38,7 +34,7 @@ services:
       - ../../packages/magmalte/grafana:/usr/src/packages/magmalte/grafana
       - ../../packages/magmalte/alerts:/usr/src/packages/magmalte/alerts
     depends_on:
-      - mariadb
+      - postgres
     networks:
       - default
       - orc8r_default
@@ -50,12 +46,13 @@ services:
       API_HOST: ${API_HOST:-nginx:9443}
       PORT: 8081
       HOST: 0.0.0.0
-      MYSQL_HOST: mariadb
+      MYSQL_HOST: postgres
+      MYSQL_PORT: 5432
       MYSQL_DB: nms
       MYSQL_USER: nms
       MYSQL_PASS: password
       MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN:-}
-      MYSQL_DIALECT: mariadb
+      MYSQL_DIALECT: postgres
       # Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
       PUPPETEER_SKIP_DOWNLOAD: "true"
     healthcheck:
@@ -76,4 +73,4 @@ networks:
     external: true
 
 volumes:
-  nmsdb:
+  nms-db:
