These changes enable the session_id to be a document id in elk stack
Signed-off-by: Sourabh Shekhar Nanoti <sourabhn@fb.com>

--- a/orc8r/cloud/docker/fluentd/conf/fluent.conf
+++ b/orc8r/cloud/docker/fluentd/conf/fluent.conf
@@ -64,6 +64,7 @@
     logstash_prefix eventd
     include_tag_key true
     tag_key tag
+    id_key session_id
     flush_interval 1s
   </store>
   <store>
