--- a/lte/gateway/c/oai/tasks/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(ha) # TASK_HA
 if (EMBEDDED_SGW)
 add_subdirectory(gtpv1-u) # TASK_GTPV1U
 add_subdirectory(sgw) # TASK_SGW
+add_subdirectory(sgw_s8) # TASK_SGW_S8
 else (EMBEDDED_SGW)
 add_subdirectory(s11) # TASK_S11
 add_subdirectory(udp) #TASK_UDP
