--- a/orc8r/cloud/configs/service_registry.yml
+++ b/orc8r/cloud/configs/service_registry.yml
@@ -47,7 +47,6 @@ services:
       orc8r.io/obsidian_handlers_path_prefixes: >
         /,
         /magma/v1/channels,
-        /magma/v1/events,
         /magma/v1/networks,
         /magma/v1/networks/:network_id,
 
@@ -94,6 +93,10 @@ services:
     proxy_type: "clientcert"
     labels:
       orc8r.io/swagger_spec: "true"
+    annotations:
+      orc8r.io/obsidian_handlers_path_prefixes: >
+        /magma/v1/networks/logs,
+        /magma/v1/events,
 
   obsidian:
     host: "localhost"
