DO NOT COMMIT Link in missing library for use of GPR_ASSERT in SessionManagerServer.cpp
Edit: Appears I bypassed GPR_ASSERT by removal. So this PR may be not a solution?

Signed-off-by: Scott Harrison Moeller <smoeller@fb.com>

--- a/lte/gateway/c/session_manager/CMakeLists.txt
+++ b/lte/gateway/c/session_manager/CMakeLists.txt
@@ -173,7 +173,7 @@ add_library(SESSION_MANAGER
 target_link_libraries(SESSION_MANAGER
   SERVICE303_LIB SERVICE_REGISTRY ASYNC_GRPC CONFIG POLICYDB EVENTD
   DATASTORE
-  glog gflags folly pthread ${GCOV_LIB} grpc++ grpc yaml-cpp protobuf cpp_redis
+  glog gflags folly pthread ${GCOV_LIB} gpr grpc++ grpc yaml-cpp protobuf cpp_redis
   prometheus-cpp tacopie
   )
 
