--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -734,6 +734,22 @@ jobs:
           version_path: versions/cwag_version
       - magma_slack_notify
 
+  mme-clang-tidy:
+    machine:
+      image: ubuntu-2004:202010-01
+      docker_layer_caching: true
+    environment:
+      MAGMA_ROOT: /home/circleci/project
+      BRANCH: << pipeline.git.branch >>
+      REVISION: << pipeline.git.revision >>
+    steps:
+      - checkout
+      - run:
+          command: |
+            cd $MAGMA_ROOT/lte/gateway/docker/mme
+            docker build -t magma-mme-build -f Dockerfile.ubuntu20.04 ../../../../
+            docker run --env BRANCH=$BRANCH --env REVISION=$REVISION -v $MAGMA_ROOT:/magma -i -t magma-mme-build:latest /bin/bash -c 'cd /magma/lte/gateway;make clang_tidy_oai_upload'
+
   lte-test:
     machine:
       image: ubuntu-1604:201903-01
@@ -1097,6 +1113,8 @@ workflows:
   agw:
     jobs:
       - lte-test
+      - mme-clang-tidy:
+          <<: *only_master
       - lte-integ-test:
           <<: *master_and_develop
       - lte-agw-deploy:
