[CI] Parametize the slack channel for notification from CI
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,7 +340,7 @@ commands:
     parameters:
       channel:
         type: string
-        default: "#magma_ci"
+        default: "${DEFAULT_SLACK_CHANNEL}"
     steps:
       - run:
           command: |
