[cloud] [agw] AGW AMI deployment for Cloudstrapper (#5232)
Signed-off-by: Arun Thulasi <arunt@fb.com>
* AGW Deployment for Cloudstrapper

--- a/experimental/cloudstrapper/playbooks/roles/vars/build.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/build.yaml
@@ -1,14 +1,14 @@
 #Variables used in Magma build
 
 #Tune for custom builds and verify before build
-buildMagmaVersion: v1.3
-buildOrc8rLabel: mantletest
-buildHelmRepo: mantletest
+buildMagmaVersion: v1.4
+buildOrc8rLabel: 1.4.0
+buildHelmRepo: helm14
 
 #Build defaults
-buildAwsRegion: us-east-1
+buildAwsRegion: ap-northeast-1
 #AZ in same region as above
-buildAwsAz: us-east-1a
+buildAwsAz: ap-northeast-1a
 buildInstanceType: t2.xlarge
 buildGwInstanceType: t2.medium
 
@@ -18,7 +18,11 @@ buildGwInstanceType: t2.medium
 # Ubuntu 20.04 in ap-northeast-1: ami-0f2dd5fc989207c82
 # Ubuntu 20.04 in ca-central-1: ami-02e44367276fe7adc
 buildUbuntuAmi: ami-02e44367276fe7adc
-buildDebianAmi: ami-0c305b7817e9fd559
+
+#Debian 4.9.0.9 AMI n us-east-2:  ami-0c305b7817e9fd559
+#Debian 4.9.0.9 AMI n ap-northeast-1: ami-0aac5cd08e351ff0f
+buildDebianAmi: ami-0aac5cd08e351ff0f
+buildAgwAmiName: testImgAgw14
 
 buildControlRegistry: controller
 buildNginxRegistry: nginx
