--- a/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
@@ -17,7 +17,9 @@ awsHostKey: "{{ keyHost }}"
 awsAgwRegion: ap-northeast-1
 awsOrc8rRegion: ap-southeast-1
 awsAgwAz: ap-northeast-1a
-awsAgwAmi: ami-082cfa03978837a23
+
+#awsAgwAmi: ami-082cfa03978837a23
+awsAgwAmi: ami-0f568ae27c14ee6ea
 
 #------------------
 #Cluster-specific Presets
