Migrate Standalone Swagger Spec Generation to combine_swagger
Signed-off-by: Andy Lee Khuu <andykhuu@stanford.edu>

--- a/orc8r/cloud/Makefile
+++ b/orc8r/cloud/Makefile
@@ -35,7 +35,10 @@ export SWAGGER_ROOT
 export SWAGGER_COMMON
 export SWAGGER_V1_ROOT
 export SWAGGER_V1_CONFIG
+export SWAGGER_V1_SPECS_DIR
+export SWAGGER_V1_COMMON_DIR
 export SWAGGER_V1_PARTIAL_SPECS_DIR
+export SWAGGER_V1_STANDALONE_DIR
 
 COVER_DIR := $(MAGMA_ROOT)/orc8r/cloud/coverage
 export COVER_DIR
@@ -100,7 +103,7 @@ $(FMT_LIST): %_fmt:
 	make -C $*/cloud/go fmt
 	if [ -d $*/lib/go ] ; then make -C $*/lib/go fmt ; fi
 
-gen: tools swagger_directories $(GEN_LIST)
+gen: tools $(GEN_LIST)
 $(GEN_LIST): %_gen:
 	make -C $*/cloud/go gen
 
@@ -133,16 +136,14 @@ lint_tools:
 ## Swagger/API docs ##
 ######################
 
-swagger: $(SWAGGER_LIST)
+swagger: swagger_directories $(SWAGGER_LIST)
 	cp $(MAGMA_ROOT)/orc8r/cloud/go/models/swagger-common.yml $(SWAGGER_V1_COMMON_DIR)/$(SWAGGER_COMMON)
 	combine_swagger --in=$(SWAGGER_V1_PARTIAL_SPECS_DIR) --common=$(SWAGGER_V1_COMMON_DIR)/$(SWAGGER_COMMON) --out=$(SWAGGER_V1_YML)
 	swagger validate $(SWAGGER_V1_YML)
 
 swagger_directories:
 	rm -rf $(SWAGGER_V1_SPECS_DIR)
-	mkdir -p $(SWAGGER_V1_COMMON_DIR)
-	mkdir -p $(SWAGGER_V1_PARTIAL_SPECS_DIR)
-	mkdir -p $(SWAGGER_V1_STANDALONE_DIR)
+	mkdir -p $(SWAGGER_V1_COMMON_DIR) $(SWAGGER_V1_PARTIAL_SPECS_DIR) $(SWAGGER_V1_STANDALONE_DIR)
 
 
 $(SWAGGER_LIST): %_swagger:
