--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -643,7 +643,7 @@ jobs:
           images: "gateway_go|gateway_python"
           tag: test
           registry: $FEGTEST_JFROG_DOCKER_REGISTRY
-          username: $JFROM_USERNAME
+          username: $JFROG_USERNAME
           password: $JFROG_PASSWORD
       - persist-githash-version:
           file_prefix: feg
