AGW: HE: integ test
This test setup HE policy rule and validates config
in the enoy proxy.
Second test validates config as well as flows created in
OVS flow table. this test is targeted for pre-commit test
list

Signed-off-by: Pravin B Shelar <pbshelar@fb.com>

--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -160,6 +160,7 @@ uplink_gw_mac: 'ff:ff:ff:ff:ff:ff'
 ovs_gtp_stats_polling_interval: 180
 
 he_proxy_eth_mac: 'e6:8f:a2:80:80:80'
+he_enabled: true
 
 # Make as a True when gnb ip will support for uplink 
 ovs_multi_tunnel: False
