[feg]Changes to push FEG docker images (gateway_go|gateway_python) to new JFROG repo (#5466)
* updated to push feg docker images to jfrog repo

Signed-off-by: Ranjini Iyer <ranj8work@gmail.com>

* changes to only test feg-build

Signed-off-by: Ranjini Iyer <ranj8work@gmail.com>

* fixed typo

Signed-off-by: Ranjini Iyer <ranj8work@gmail.com>

* Changes to push feg docker images to new jfrog repo

Signed-off-by: Ranjini Iyer <ranj8work@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -630,6 +630,12 @@ jobs:
           project: feg
           images: "gateway_go|gateway_python"
           registry: $DOCKER_FEG_REGISTRY
+      - tag-push-docker:
+          project: feg
+          images: "gateway_go|gateway_python"
+          registry: $JFROG_DOCKER_FEG_REGISTRY
+          username: $JFROG_USERNAME
+          password: $JFROG_PASSWORD
       - persist-githash-version:
           file_prefix: feg
       - notify-magma:
