--- a/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
+++ b/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
@@ -26,7 +26,7 @@ ovs_build_config:
 ovs_pkgrepo_proto: http
 ovs_pkgrepo_host: packages.magma.etagecom.io
 ovs_pkgrepo_path: ""
-ovs_pkgrepo_dist: stretch-stable
+ovs_pkgrepo_dist: stretch-1.4.0
 ovs_pkgrepo_component: main
 ovs_pkgrepo_name: "ovs_package_repo"
 
